@@ -1,5 +1,10 @@
 2007-06-30  Gavin Salam  <salam@lpthe.jussieu.fr>
 
+	* make-enum-IO.pl: 
+	  added this perl file to help with automated generation of I/O
+	  for enums -- does not quite have full flexibility yet
+	  (e.g. enums inside classes), but should slowly get there.
+
 	* CmdLine.hh: 
 
 	  added CmdLine::value_prefix<T>(opt,prefix), which interprets
